--- a/recipe_site/cookapp/templates/base.html
+++ b/recipe_site/cookapp/templates/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <h1>Проект “Сайт рецептов” на Django</h1>
 	<title>{% block title %}{% endblock %}</title>
     </head>
     <body>
+
 	<div class="container">
         {% block content %}{% endblock %}
 	</div>
