--- a/recipe_site/cookapp/templates/base.html
+++ b/recipe_site/cookapp/templates/base.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+<html lang="ru" data-bs-theme="dark" class="h-100">
 <html>
-    <head>
-        <h1>Проект “Сайт рецептов” на Django</h1>
-	<title>{% block title %}{% endblock %}</title>
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <h1>Проект “Сайт рецептов” на Django</h1>
+    <title>{% block title %}{% endblock %}</title>
+</head>
+<body>
 
-	<div class="container">
-        {% block content %}{% endblock %}
-	</div>
-    </body>
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
+</body>
 </html>
